infra/api-deployment.yaml
# This file is deprecated - use deployment.yaml instead
# Keeping for reference only

apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-processor-legacy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-processor-legacy
  template:
    metadata:
      labels:
        app: data-processor-legacy
    spec:
      containers:
        - name: data-processor
          image: docker.io/johnlenon003/tweets-processor:v1
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: data-processor-legacy
spec:
  selector:
    app: data-processor-legacy
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
