infra/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: tweet-processor-route
  labels:
    app: tweet-processor
spec:
  to:
    kind: Service
    name: tweet-processor-service
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
